@@ -22,7 +22,7 @@ var { elasticApmAwsLambda } = require('./lambda')
 var Metrics = require('./metrics')
 var parsers = require('./parsers')
 var symbols = require('./symbols')
-const { frameCacheStats } = require('./stacktraces')
+const { frameCacheStats, initStackTraceCollection } = require('./stacktraces')
 const Span = require('./instrumentation/span')
 const Transaction = require('./instrumentation/transaction')
 
@@ -261,6 +261,7 @@ Agent.prototype.start = function (opts) {
     }, 'agent configured correctly')
   }
 
+  initStackTraceCollection()
   this._transport = this._conf.transport(this._conf, this)
 
   let runContextClass
