@@ -18,7 +18,14 @@ var path = require('path')
 
 const asyncCache = require('async-cache')
 const afterAllResults = require('after-all-results')
-const errorCallsites = require('error-callsites')
+
+// avoid loading error-callsites until needed to avoid
+// Error.prepareStackTrace side-effects
+// https://github.com/elastic/apm-agent-nodejs/issues/2833
+let errorCallsites
+function initStackTraceCollection () {
+  errorCallsites = require('error-callsites')
+}
 const errorStackParser = require('error-stack-parser')
 const loadSourceMap = require('./load-source-map')
 const LRU = require('lru-cache')
@@ -408,7 +415,7 @@ function frameFromCallSite (log, callsite, cwd, sourceLinesAppFrames, sourceLine
 function gatherStackTrace (log, err, sourceLinesAppFrames, sourceLinesLibraryFrames, filterCallSite, cb) {
   // errorCallsites returns an array of v8 CallSite objects.
   // https://v8.dev/docs/stack-trace-api#customizing-stack-traces
-  let callsites = errorCallsites(err)
+  let callsites = errorCallsites ? errorCallsites(err) : null
 
   const next = afterAllResults(function finish (_err, stacktrace) {
     // _err is always null from frameFromCallSite.
@@ -424,7 +431,7 @@ function gatherStackTrace (log, err, sourceLinesAppFrames, sourceLinesLibraryFra
 
   if (!isValidCallsites(callsites)) {
     // When can this happen? Another competing Error.prepareStackTrace breaking
-    // error-callsites?
+    // error-callsites? Also initStackTraceCollection not having been called.
     log.debug('could not get valid callsites from error "%s"', err)
   } else if (callsites) {
     if (filterCallSite) {
@@ -447,6 +454,7 @@ function gatherStackTrace (log, err, sourceLinesAppFrames, sourceLinesLibraryFra
 module.exports = {
   gatherStackTrace,
   frameCacheStats,
+  initStackTraceCollection,
 
   // Exported for testing only.
   stackTraceFromErrStackString
